# finalmaxbot

./: .dockerignore  .env.example  .env.vm.example  .gitattributes  .gitignore  Dockerfile  MAX_bot_cursor_implementation_pack.docx  MAX_bot_unified_spec_ru.docx  alembic.ini  docker-compose.postgres.yml  docker-compose.vm-sqlite.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_m3_full_schema.py  002_m4_monetization.py  003_m5_output_pipeline.py  004_m6_billing.py  005_m7_recurring.py  006_m8_trial_first_seen.py  007_m9_analytics_events.py  008_m10_webhook_idempotency_tables.py
apps/: __init__.py
apps/api/: __init__.py  billing_webhook.py  internal_debug_db.py  internal_launch.py  internal_m4.py  internal_m7.py  main.py
apps/bot/: __init__.py  generation_factory.py  generation_orchestrator.py  handlers.py  interaction_router.py  max_client.py  max_dispatch.py  max_payload.py  max_polling.py  max_subscription.py  menus.py  outbound_context.py  paywall.py  router.py  state_machine_service.py  webhook_idempotency.py
docs/: copy_map_ru.md  docker.md  launch_runbook.md  m3_callbacks.md  m3_flows.md  m3_webhook_examples.md  m4_monetization.md  m5_output_pipeline.md  m6_launch.md  m7_recurring.md  qa_seed_examples.md
scripts/: docker-entrypoint.sh  m3_webhook_simulate.py  m4_proof_sample.py  verify_setup.py  yandex_image_smoke.py
tests/: conftest.py  test_db_ping.py  test_m4.py  test_m5.py  test_m6_billing.py  test_m7_recurring.py  test_max_outbound_ids.py  test_max_polling_parse.py  test_max_upload_parse.py
(+1 files in other folders)
